<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Maquette connexion -->
    <string name="app_name">SportSharing</string>
    <string name="login">Identifiant</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Connexion</string>
    <string name="passwordForgive">Mot de passe oublié ?</string>
    <string name="infoAccount">Vous n\'avez pas de compte ?</string>
    <string name="subscribe">Inscrivez-vous</string>
    <string name="networks">Nos réseaux</string>
    <string name="todo">TODO</string>

    <!-- Maquette Inscription 1 -->
    <string name="activity_subscribe_1" tools:ignore="TypographyFractions">Inscription (1/3)</string>
    <string name="required">*</string>
    <string name="name">Nom</string>
    <string name="confirmPassword">Confirmer</string>
    <string name="firstName">Prénom</string>
    <string name="mail">Adresse Mail</string>
    <string name="birthday">Date de naissance</string>
    <string name="city">Ville</string>
    <string name="postalCode">Code Postal</string>
    <string name="phoneNumber">Téléphone</string>
    <string name="requiredTexte">Champs Obligatoires</string>
    <string name="conditionUseAppli">J\'accepte les Condtions d\'utilisation générales de l\'application</string>
    <string name="notificationTexte">Je souhaite recevoir des notifications de la part de l\'application (ce paramètre n\'est pas définitif et pourra être modifié par la suite)</string>
    <string name="cancel">Annuler</string>
    <string name="next">Suivant</string>

    <!-- Maquette Inscription 2 -->
    <string name="activity_subscribe_2">Inscription (2/3)</string>
    <string name="selectSports">Choisissez vos sports :</string>
    <string name="sport">Sport</string>
    <string name="level">Niveau</string>
    <string name="sportsList">Liste de vos sports : (10 max)</string>
    <string name="precedent">Précédent</string>

    <!-- Maquette Inscription 3 -->
    <string name="activity_subscribe_3">Inscription (3/3)</string>
    <string name="textSePresenter">Entrer du texte</string>
    <string name="sePresenter">Se présenter :</string>
    <string name="nbrCaractereTextSePresenter">0/400</string>
    <string name="confirm">Valider</string>

    <!-- Maquette Accueil (Carte - Classique) -->
    <string name="map">Carte</string>
    <string name="activity">Activité</string>
    <string name="createActivity">Créer une activité</string>
    <string name="home">Accueil</string>
    <string name="activityRegistered"><u>Activités inscrites</u></string>
    <string name="completedActivity"><u>Activités terminés</u></string>
    <string name="myActivities"><u>Mes activités</u></string>
    <string name="search">Rechercher</string>
    <string name="location">Lieu</string>
    <string name="exampleCity">Paris</string>
    <string name="day">Jour</string>
    <string name="time">Heure</string>
    <string name="searchTab">Recherche</string>
    <string name="suggestion">Suggestion</string>
    <string name="result">Résultats</string>
    <string name="timeBegin">Heure\nDébut</string>
    <string name="timeEnd">Heure Fin</string>
    <string name="numberPlayerMax">Nombre de participants maximum</string>
    <string name="numberPlayer">Nombre de participants</string>
    <string name="description">Description</string>
    <string name="profil">Profil</string>
    <string name="sportPracticed">Sports pratiqués</string>
    <string name="message">Message</string>
    <string name="timeRecap">Heure début - Durée</string>
    <string name="levelMinRecommended">Niveau minimum conseillé</string>
    <string name="suite">Continuer</string>
    <string name="label_stay_connected">Restez connecté</string>

    <!-- Message d'erreur -->
    <string name="error_login">Login incorrect</string>
    <string name="error_password">Mot de passe incorrect</string>
    <string name="error_empty_field">Ce champ ne peut être vide</string>
    <string name="error_no_space">Ce champs ne peut pas contenir d\'espace</string>
    <string name="error_mail">Mail inccorect</string>
    <string name="error_birthday">la date de naissance n\'a pas été correctement saisit.</string>
    <string name="error_birthday_model">Elle doit être de la forme (jj/mm/aaaa) ou (jjmmaaaa)</string>
    <string name="error_with_number">Ce champs ne peut pas contenir de chiffre</string>
    <string name="error_postal_code">Code postal incorrect</string>
    <string name="error_phone_number">Numéro de téléphone incorrect</string>
    <string name="error_similar_password">Les mots de passe doivent être identique</string>
    <string name="avis">Avis</string>
    <string name="opinions_left">Avis laissés</string>
    <string name="opinions_received">Avis reçu</string>
    <string name="my_account">Mon Compte</string>
    <string name="general_informations">Informations générales</string>
    <string name="home_address">Adresse postale</string>
    <string name="profil_picture">Photo de profil</string>
    <string name="logout">Déconnexion</string>
    <string name="my_activity">Mes activités</string>

</resources>
