<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_application_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/center_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <!-- Titre -->

    <TextView
        android:id="@+id/nomActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lineSpacingExtra="10sp"
        android:text="@string/activity_subscribe_1"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:fontFamily="serif"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline"
        tools:layout_constraintRight_toRightOf="@id/right_guideline" />

    <!-- Modele étoile -->

    <!-- Identifiant -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/nomActivity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login"
            android:inputType="text"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Mot de passe -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@id/center_guideline"
        app:layout_constraintTop_toBottomOf="@id/loginLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="12sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Confirmer le mot de passe -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirmPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/center_guideline"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/loginLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:textSize="12sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Nom -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@id/center_guideline"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="text"
            android:textSize="12sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Prenom -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstNameLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintLeft_toLeftOf="@id/center_guideline"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/confirmPasswordLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstName"
            android:inputType="text" android:textSize="12sp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Adresse mail -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@id/center_guideline"
        app:layout_constraintTop_toBottomOf="@id/firstNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:inputType="textEmailAddress"
            android:textSize="12sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Date de naissance -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthdayLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/center_guideline"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/firstNameLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthday"
            android:inputType="datetime"
            android:textSize="12sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Ville -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cityLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@id/center_guideline"
        app:layout_constraintTop_toBottomOf="@id/birthdayLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="text"
            android:textSize="12sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Code postal -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postalCodeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/center_guideline"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/birthdayLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postalCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/postalCode"
            android:inputType="number"
            android:textSize="12sp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Téléphone -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneNumberLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@id/left_guideline"
        app:layout_constraintRight_toLeftOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/postalCodeLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber"
            android:inputType="phone"
            android:textSize="12sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="244dp"
        android:layout_height="31dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/conditionUseAppli"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/switchCondition"
        app:layout_constraintTop_toTopOf="@+id/switchCondition" />

    <TextView
        android:layout_width="336dp"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/notificationTexte"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintStart_toEndOf="@+id/switchNotification"
        app:layout_constraintTop_toTopOf="@+id/switchNotification" />

    <TextView
        android:id="@+id/textRequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/required"
        android:textColor="#EB0909"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/switchNotification"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/requiredTexte"
        android:textColor="#000000"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/textRequired"
        app:layout_constraintStart_toEndOf="@+id/textRequired" />

    <Switch
        android:id="@+id/switchCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/bottom_guideline" />

    <Switch
        android:id="@+id/switchNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/switchCondition" />

    <Button
        android:id="@+id/buttonPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/center_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/bottom_application_guideline" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/center_guideline"
        app:layout_constraintTop_toTopOf="@+id/bottom_application_guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>