<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <!-- Barre de placement -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:clickable="true"
        android:elevation="0dp"
        android:focusable="true"
        android:tint="#000000"
        app:backgroundTint="@null"
        app:backgroundTintMode="screen"
        app:elevation="0dp"
        app:fabSize="mini"
        app:layout_constraintEnd_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/top_guideline"
        app:rippleColor="@null"
        app:srcCompat="?attr/actionModeCloseDrawable" tools:targetApi="lollipop" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.025" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.27" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/middle_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />


    <TextView
        android:id="@+id/titrePage"
        android:layout_width="287dp"
        android:layout_height="26dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:text="@string/profil"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageUser"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/pseudoUser"
        app:layout_constraintEnd_toStartOf="@+id/middle_guideline"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="@+id/middle_guideline"
        app:layout_constraintTop_toBottomOf="@+id/titrePage"
        app:srcCompat="@drawable/user" />

    <TextView
        android:id="@+id/pseudoUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/imageUser"
        app:layout_constraintStart_toStartOf="@+id/imageUser"
        app:layout_constraintTop_toBottomOf="@+id/imageUser" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/LigneNavBarTop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LigneTop">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/avis"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/avisRecu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/opinions_received"
            android:textColor="#0392CA"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:id="@+id/avisLaisses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/opinions_left"
            android:textColor="#0392CA"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/my_account"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"/>

        <TextView
            android:id="@+id/infoGenerales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/general_informations"
            android:textColor="#0392CA"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/description"
            android:textColor="#0392CA"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:id="@+id/adressePostale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/home_address"
            android:textColor="#0392CA"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:id="@+id/sports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/sportPracticed"
            android:textColor="#0392CA"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:id="@+id/mesActivites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="5dp"
            android:text="@string/my_activity"
            android:textColor="#0392CA"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/photoProfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/profil_picture"
            android:textColor="#0392CA"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"/>

        <TextView
            android:id="@+id/deconnexion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/logout"
            android:textColor="#CA0303"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>

    <View
        android:id="@+id/LigneTop"
        android:layout_width="wrap_content"
        android:layout_height="2dip"
        android:background="@color/backgroundTabSports"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_guideline2" />

    <View
        android:id="@+id/LigneNavBarTop"
        android:layout_width="wrap_content"
        android:layout_height="2dip"
        android:background="@color/backgroundTabSports"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/top_guideline4" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="#00FFFFFF"
        app:itemIconTint="@drawable/bottom_navigation_color"
        app:itemTextColor="@drawable/bottom_navigation_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LigneNavBarTop"
        app:menu="@menu/bottom_navigation_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>